--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_auth: ^4.17.7
   shared_preferences: ^2.0.6
+  firebase_core: ^2.17.0
+  firebase_core_desktop: ^1.0.2
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
