--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.6
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
+  cloud_firestore: ^4.15.7
 
 dev_dependencies:
   flutter_test:
