Wrong commit, this one is the one that added sign in with google

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "testnote",
-    "short_name": "testnote",
+    "name": "notetestlol",
+    "short_name": "notetestlol",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
