--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.15.7
+  google_sign_in: ^6.2.1
+  url_launcher: ^6.2.5
+  app_links: ^3.5.1
+  win32_registry: ^1.1.2
 
 dev_dependencies:
   flutter_test:
