--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   url_launcher: ^6.2.5
   app_links: ^3.5.1
   win32_registry: ^1.1.2
+  curved_navigation_bar: ^1.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
