--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   win32_registry: ^1.1.2
   curved_navigation_bar: ^1.0.0
   intl: ^0.17.0
+  firebase_auth_mocks: ^0.13.0
+  mockito: ^5.0.0
 
 dev_dependencies:
   flutter_test:
