--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.0.0+3
 
 environment:
   sdk: ">=3.3.0 <4.0.0"
@@ -46,8 +46,7 @@ dependencies:
   intl: ^0.18.1
   firebase_auth_mocks: ^0.13.0
   mockito: ^5.0.0
-  flutter_quill:
-    git: https://github.com/singerdmx/flutter-quill.git
+  flutter_quill: ^9.3.10
 
 dev_dependencies:
   flutter_test:
