--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   app_links: ^3.5.1
   win32_registry: ^1.1.2
   curved_navigation_bar: ^1.0.0
-  intl: ^0.18.1
+  intl: 0.19.0
   firebase_auth_mocks: ^0.13.0
   mockito: ^5.0.0
   flutter_quill: ^9.3.10
